# jqr.SLDASM

./: .gitignore  CMakeLists.txt  README.md  frames_2026-06-25_20.29.00.gv  package.xml
config/: joint_names_jqr.SLDASM.yaml
launch/: display.launch  gazebo.launch
meshes/: Link_l_2.STL  Link_l_3.STL  Link_l_4.STL  Link_l_5.STL  Link_l_6.STL  Link_l_7.STL  Link_r_2.STL  Link_r_3.STL  Link_r_4.STL  Link_r_5.STL  Link_r_6.STL  Link_r_7.STL  base_link.STL  link_1.STL
scripts/jqr_description/: CMakeLists.txt  package.xml
scripts/jqr_description/config/: controllers.yaml  joint_names.yaml
scripts/jqr_description/gestures/: go_straight.json  lane_change.json  left_turn.json  pull_over.json  right_turn.json  slow_down.json  stop.json  wait_turn.json
scripts/jqr_description/launch/: controller_rviz.launch.py  demo.launch.py  display.launch.py  gazebo.launch.py  gesture_rviz.launch.py  rviz_gesture.launch.py  traffic_gesture.launch.py
scripts/jqr_description/rviz/: display.rviz
scripts/jqr_description/scripts/: gen_fixed_sdf.py  gen_sdf_traj.py  gesture_demo.py  gesture_player.py  gesture_publisher.py  gesture_recorder.py  gz_joint_bridge.py  robot_description_publisher.py  start_controller_rviz.sh  start_demo.sh  start_gesture_demo.sh  start_gesture_rviz.sh  zero_joint_publisher.py
scripts/jqr_description/urdf/: jqr.SLDASM.urdf
scripts/jqr_description/worlds/: traffic_world.sdf
urdf/: jqr.SLDASM.csv  jqr.SLDASM.urdf
