<package format="2">
  <name>jqr.SLDASM</name>
  <version>1.0.0</version>
  <description>jqr 双机械臂人形上半身机器人 — ROS2 URDF 描述包</description>
  <author>wdros</author>
  <maintainer email="wdros@email.com">wdros</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <architecture_independent />
  </export>
</package>
